add main workflows 1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,4 +6,6 @@ jobs:
     name: A job to say hello
     steps:
       - name: Step 1
+        uses: ./
+      - name: Step 2
         run: echo "Hello Hello xxx"
