--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,6 @@ jobs:
     name: A job to say hello
     steps:
       - name: Step 1
-        uses: ./
+        uses: /
       - name: Step 2
         run: echo "Hello Hello xxx"
