--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,6 @@ jobs:
       - name: Step 2
         run: git -v
       - name: Step 3
+        run: ls
+      - name: Step 4
         run: git status
