--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Step 1
         run: pwd
       - name: Step 2
-        run: git clone https://github.com/onehitdragon/godgon-webpage.git .
+        run: git clone https://github.com/onehitdragon/ci-cd-v0.git .
       - name: Step 3
         run: ls -a
       - name: Step 4
-        run: git status
+        uses: ./
